--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
     font-weight: 400;
     font-style: normal;
     background-color: #FDF4E3;
+    overflow: hidden;
 }
 
 .svg-large-img {
