--- a/css/faсtpageStyle.css
+++ b/css/faсtpageStyle.css
@@ -10,7 +10,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-family: 'Pacifico', serif;
+	font-family: 'monocraft', serif;
 	font-weight: 400;
 	font-style: normal;
 	background-color: black;
@@ -22,7 +22,7 @@ p {
 	align-items: center;
 	position: fixed;
 	color: white;
-	font-size: 48px;
+	font-size: 38px;
 	z-index: 18;
 	user-select: none;
 	-webkit-user-select: none;
@@ -38,6 +38,16 @@ img {
 	width: 300px;
 	display: none;
 	object-fit: cover;
-	transform: translateY(-45%);
+	transform: translateY(-55%);
+	transition: 0.5s;
+}
+#code {
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	height: auto;
+	width: 90%;
+	display: none;
+	transform: translateY(-55%);
 	transition: 0.5s;
 }
