--- a/css/faсtpageStyle.css
+++ b/css/faсtpageStyle.css
@@ -4,13 +4,20 @@
 	box-sizing: border-box;
 }
 
+@font-face {
+	font-family: 'monocraft';
+	src: url('fonts/Monocraft.eot');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
 	height: 100vh;
 	width: 100vw;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-family: 'monocraft', serif;
+	font-family: 'monocraft';
 	font-weight: 400;
 	font-style: normal;
 	background-color: black;
