--- a/css/faсtpageStyle.css
+++ b/css/faсtpageStyle.css
@@ -6,7 +6,7 @@
 
 @font-face {
 	font-family: 'monocraft';
-	src: url('fonts/Monocraft.eot');
+	src: url('../fonts/Monocraft.otf');
 	font-weight: normal;
 	font-style: normal;
 }
