--- a/css/faсtpageStyle.css
+++ b/css/faсtpageStyle.css
@@ -17,7 +17,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-family: 'monocraft';
+	font-family: 'monocraft', sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	background-color: black;
