--- a/css/faсtpageStyle.css
+++ b/css/faсtpageStyle.css
@@ -6,7 +6,7 @@
 
 @font-face {
 	font-family: 'monocraft';
-	src: url('../fonts/Monocraft.otf');
+	src: url('../fonts/Monocraft.otf'), url('../fonts/Monocraft.ttf');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -17,7 +17,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'monocraft', sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	background-color: black;
